2022-09-01T00:28:25Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/2967996206
* notice: last 14d: unq all: 14 26
* notice: prev accum: outdated-unq outdated-all / unq all: 42 49 / 61 74
* notice: next accum: outdated-unq outdated-all / unq all: 42 49 / 62 75
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +5 +6 -0 -0 / 5 6
* notice: removed / changed dates: [] / [2022-08-31]

2022-08-31T08:07:09Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/2962255814
* notice: last 14d: unq all: 13 25
* notice: prev accum: outdated-unq outdated-all / unq all: 42 49 / 57 69
* notice: next accum: outdated-unq outdated-all / unq all: 42 49 / 61 74
* notice: prev exec diff / last date diff / accum: unq all: +4 +5 -0 -0 / +4 +5 -0 -0 / 4 5
* notice: removed / changed dates: [] / [2022-08-31]

2022-08-31T00:37:46Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/2960540541
* notice: last 14d: unq all: 11 20
* notice: prev accum: outdated-unq outdated-all / unq all: 42 49 / 51 62
* notice: next accum: outdated-unq outdated-all / unq all: 42 49 / 57 69
* notice: prev exec diff / last date diff / accum: unq all: +6 +7 -0 -0 / +6 +7 -0 -0 / 6 7
* notice: removed / changed dates: [] / [2022-08-30]

2022-08-30T00:37:48Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/2952737907
* notice: last 14d: unq all: 8 13
* notice: prev accum: outdated-unq outdated-all / unq all: 42 49 / 44 53
* notice: next accum: outdated-unq outdated-all / unq all: 42 49 / 51 62
* notice: prev exec diff / last date diff / accum: unq all: +7 +9 -0 -0 / +7 +9 -0 -0 / 7 9
* notice: removed / changed dates: [] / [2022-08-29]

2022-08-26T16:01:47Z:
* notice: last 14d: unq all: 2 4
* notice: prev accum: outdated-unq outdated-all / unq all: 37 43 / 40 48