@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-09-01T00:28:25Z",
-  "count_outdated" : 49,
-  "uniques_outdated" : 42,
+  "timestamp" : "2022-09-01T08:07:35Z",
+  "count_outdated" : 51,
+  "uniques_outdated" : 43,
   "count" : 75,
   "uniques" : 62,
   "clones" : [
-    {
-      "timestamp": "2022-08-18T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-08-22T00:00:00Z",
       "count": 2,
