@@ -1,12 +1,7 @@
 {
-  "count": 26,
+  "count": 24,
   "uniques": 14,
   "clones": [
-    {
-      "timestamp": "2022-08-18T00:00:00Z",
-      "count": 2,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-08-22T00:00:00Z",
       "count": 2,
