@@ -1,3 +1,11 @@
+2022-09-01T08:07:35Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/2969951552
+* notice: last 14d: unq all: 14 24
+* notice: prev accum: outdated-unq outdated-all / unq all: 42 49 / 62 75
+* notice: next accum: outdated-unq outdated-all / unq all: 43 51 / 62 75
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2022-08-18] / []
+
 2022-09-01T00:28:25Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/2967996206
 * notice: last 14d: unq all: 14 26
